Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11567

llog_reader does not show index of changelog records

XMLWordPrintable

    • 3
    • 9223372036854775807

      For changelog records, llog_reader reports this:

      #56089 (120)changelog record id:0x0 cr_flags:0x5442 cr_type:CLOSE(0xb)
      

      It would be more useful if it included the changelog index instead of record id:

      #56089 (120)changelog index:3837456 cr_flags:0x5442 cr_type:CLOSE(0xb)
      

      So that records can be tracked from disk on the MDT to output of lfs changelog or similar.

            ofaaland Olaf Faaland
            ofaaland Olaf Faaland
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: